--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.14",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
@@ -29,5 +30,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
