--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon",
+    "dev": "NODE_ENV=development npx nodemon",
+    "dev:stag": "NODE_ENV=stagging npx nodemon",
+    "dev:prod": "NODE_ENV=production npx nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/index.js",
+    "start:dev": "NODE_ENV=development node dist/index.js",
+    "start:stag": "NODE_ENV=staging node dist/index.js",
+    "start:prod": "NODE_ENV=production node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -32,6 +36,8 @@
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "mongodb": "^6.17.0"
   }
 }
